# database

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REFERENCE.md  TODO.md  build-all.bat  test-all.bat
.claude/: settings.local.json
bindings/python/: pyproject.toml  test.bat  test.sh
bindings/python/generator/: build_ffi.py  generator.bat
bindings/python/psr_database/: __init__.py  _psr_database_cffi.c  database.py  element.py  exceptions.py  lua_runner.py
bindings/python/psr_database/_ffi/: __init__.py  bindings.py  library_loader.py  types.py
bindings/python/src/psr_database/: __init__.py  _ffi.py  _psr_database_cffi.py  exceptions.py
bindings/python/tests/: test_basic.py
cmake/: quiverConfig.cmake.in
docs/: README.md  migrations.md  rules.md  time_series.md
scripts/: generator.bat
src/: CMakeLists.txt  c_api.cpp  c_api_common.cpp  c_api_database.cpp  c_api_element.cpp  c_api_internal.h  c_api_lua_runner.cpp  database.cpp  element.cpp  element_builder.cpp  error.cpp  lua_runner.cpp  migration.cpp  migrations.cpp  result.cpp  row.cpp  schema.cpp  schema_validator.cpp  transaction.cpp  type_validator.cpp
tests/: CMakeLists.txt  database_fixture.h  test_c_api.cpp  test_c_api_database.cpp  test_c_api_database_create.cpp  test_c_api_database_delete.cpp  test_c_api_database_lifecycle.cpp  test_c_api_database_query.cpp  test_c_api_database_read.cpp  test_c_api_database_update.cpp  test_c_api_element.cpp  test_c_api_lua_runner.cpp  test_database.cpp  test_database_create.cpp  test_database_delete.cpp  test_database_errors.cpp  test_database_execute.cpp  test_database_lifecycle.cpp  test_database_query.cpp  test_database_read.cpp  test_database_relations.cpp  test_database_schema.sql  test_database_update.cpp  test_database_utils.cpp  test_element.cpp  test_element_builder.cpp  test_issues.cpp  test_lua_runner.cpp  test_migrations.cpp  (+4 more)
(+144 files in other folders)
